<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">My Nanodegree Apps!</string>
    <string name="streamer">Spotify Streamer</string>
    <string name="football_scores">Football Scores App</string>
    <string name="library">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">My Capstone Project!</string>
    <string name="action_settings">Settings</string>
</resources>
