<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        style="@style/Header"
        android:text="@string/title"
        android:id="@+id/title"/>

    <Button
        style="@style/BaseButton.Button"
        android:text="@string/streamer"
        android:id="@+id/streamer_button"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/title"
        android:onClick="launchStreamer"/>

    <Button
        style="@style/BaseButton.Button"
        android:text="@string/football_scores"
        android:id="@+id/football_scores_button"
        android:layout_below="@+id/streamer_button"
        android:onClick="launchFootballScores"/>

    <Button
        style="@style/BaseButton.Button"
        android:text="@string/library"
        android:id="@+id/library_button"
        android:layout_below="@+id/football_scores_button"
        android:onClick="launchLibrary"/>

    <Button
        style="@style/BaseButton.Button"
        android:text="@string/build_it_bigger"
        android:id="@+id/build_it_bigger_button"
        android:layout_below="@+id/library_button"
        android:onClick="launchBuildItBigger"/>

    <Button
        style="@style/BaseButton.Button"
        android:text="@string/xyz_reader"
        android:id="@+id/xyz_reader_button"
        android:layout_below="@+id/build_it_bigger_button"
        android:onClick="launchXYZReader"/>

    <Button
        style="@style/BaseButton.AccentButton"
        android:text="@string/capstone"
        android:id="@+id/capstone_button"
        android:layout_below="@+id/xyz_reader_button"
        android:onClick="launchCapstone"/>
</RelativeLayout>
